Fixed freezing When delete Item

--- a/Tribler.API/Tribler.API.csproj
+++ b/Tribler.API/Tribler.API.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
+    <Description>Tribler 8+ API for .NET</Description>
   </PropertyGroup>
 
   <ItemGroup>
