Update Package Information

--- a/Tribler.API/Tribler.API.csproj
+++ b/Tribler.API/Tribler.API.csproj
@@ -6,7 +6,26 @@
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
     <Description>Tribler 8+ API for .NET</Description>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <Title>Tribler API for .NET</Title>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageProjectUrl></PackageProjectUrl>
+    <PackageIcon>tribler.png</PackageIcon>
+    <RepositoryUrl>https://github.com/MARIUSVAMPIRE/Tribler-API-for-.NET</RepositoryUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\tribler.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
