--- a/Tribler.API/Tribler.API.csproj
+++ b/Tribler.API/Tribler.API.csproj
@@ -14,6 +14,8 @@
     <PackageProjectUrl></PackageProjectUrl>
     <PackageIcon>tribler.png</PackageIcon>
     <RepositoryUrl>https://github.com/MARIUSVAMPIRE/Tribler-API-for-.NET</RepositoryUrl>
+    <AssemblyVersion>1.0.0.73</AssemblyVersion>
+    <FileVersion>1.0.0.73</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
